--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,10 @@
 .header{
   z-index: 99;
 }
+#app {
+  height: 100vh;
+  max-height: 100dvh;
+  overscroll-behavior: none;
+  -webkit-font-smoothing: antialiased;
+  overflow: auto;
+}
