--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,11 @@
 .header{
   z-index: 99;
 }
-.active{
+#navbar a.active{
   border-bottom: 2px solid #006435;
+  color: #006435;
+}
+#mobilenavbar a.active{
+  border-bottom: 2px solid #006435;
+  color: #006435;
 }
